1.2.0
  * Added a new lsl.common.adp module to help describe ADP
  * Added support for ADP TBF data
  * Added support for ADP COR data
  * Added support for ADP 8+8-bit DRX data, also know as DRX8
  * Added support for complex antenna response to lsl.sim.nec_util.NECPattern

1.1.4
  * Fixed a missing import statement and a couple of bugs in splitTBN.py
  * Fixed a conjugation problem in the lsl.writer.idi module that caused the image to be transposed in AIPS
  * Fixed a conjugation problem in the lsl.utils.imaging module that caused images created from FITS-IDI files to be transposed

1.1.3.2
  * Applied a fix for the course FIFO phase jumps in the core.c FEngineC2/3 functions.

1.1.3.1
  * Re-fixed a bug in the complex functions in lsl.correlator._spec and lsl.correlator._stokes that caused the negative frequencies in odd-sized FFTs to be unpacked incorrectly

1.1.3
  * Fixed a bug in the complex functions in lsl.correlator._core, lsl.correlator._spec, and lsl.correlator._stokes that caused the negative frequencies in odd-sized FFTs to be unpacked incorrectly
  * Updated the tai-utc.dat file for the upcoming leap second in December 2016
  * Changed the Earth orientation parameters data source to the IERS FTP server

1.1.2
  * Fixed a bug in the lsl.reader.ldp.TBWFile class that caused the wrong start time to be returned in some cases
  * Fixed a missing import statement in tbnSpectra.py that caused the script to fail when a metadata tarball as passed in on the command line
  * Updated the lsl.writer.fitsidi module to be more efficient
  * Updated the lsl.writer.uvfits module to be more efficient
  * Updated the lsl.imaging.utils.CorrelatedMS function to work with MeasurementSets stored inside a tarball
  * Small change to lsl.correlator.uvUtils.computeUVW to make it faster for large frequency arrays
  * Added 'memmap' and 'clobber' keywords to the various lsl.writer modules to expose a consistent interface